--- a/lo4j.properties
+++ b/lo4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.java.lang.Exception=ALL, java.lang.Exception
+log4j.logger.debug=ALL, java.lang.Exception
 log4j.appender.java.lang.Exception=org.apache.log4j.RollingFileAppender
 log4j.appender.java.lang.Exception.File=C:\Users\admin\Documents\lab3_Suslov_KV\lab3\src\log.txt
 log4j.appender.java.lang.Exception.MaxFileSize=2048KB
