--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,18 @@
     <servlet-class>main.controllers.HelloServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>AllPublicationsServlet</servlet-name>
+    <servlet-class>main.controllers.AllPublicationsServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>main.controllers.LoginServlet</servlet-class>
   </servlet>
   <servlet>
-    <description>
-    </description>
+    <servlet-name>PublicationsServlet</servlet-name>
+    <servlet-class>main.controllers.PublicationsServlet</servlet-class>
+  </servlet>
+  <servlet>
     <display-name>RegistrationServlet</display-name>
     <servlet-name>RegistrationServlet</servlet-name>
     <servlet-class>main.controllers.RegistrationServlet</servlet-class>
@@ -25,8 +31,8 @@
     <servlet-class>main.controllers.ListController</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>PublicationsServlet</servlet-name>
-    <servlet-class>main.controllers.PublicationsServlet</servlet-class>
+    <servlet-name>ListPublicationsServlet</servlet-name>
+    <servlet-class>main.controllers.ListPublicationsServlet</servlet-class>
   </servlet>
   <filter>
     <filter-name>WhiteFilter</filter-name>
@@ -52,8 +58,16 @@
     <url-pattern>/welcome</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>AllPublicationsServlet</servlet-name>
+    <url-pattern>/AllPublications</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PublicationsServlet</servlet-name>
+    <url-pattern>/publications</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>RegistrationServlet</servlet-name>
@@ -64,8 +78,8 @@
     <url-pattern>/listUsers</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>PublicationsServlet</servlet-name>
-    <url-pattern>/publications</url-pattern>
+    <servlet-name>ListPublicationsServlet</servlet-name>
+    <url-pattern>/listPublications</url-pattern>
   </servlet-mapping>
   <resource-ref>
     <description>DB Connection</description>
