--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,10 +14,6 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>HelloServlet</servlet-name>
-    <servlet-class>main.controllers.HelloServlet</servlet-class>
-  </servlet>
-  <servlet>
     <servlet-name>ReadingServlet</servlet-name>
     <servlet-class>main.controllers.ReadingServlet</servlet-class>
   </servlet>
@@ -54,19 +50,14 @@
     <param-value>WEB-INF/Main-servlet.xml</param-value>
   </context-param>
 
-  <error-page>
+ <!-- <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>/error.jsp</location>
-  </error-page>
+  </error-page>-->
   <filter-mapping>
     <filter-name>WhiteFilter</filter-name>
     <url-pattern>/listUsers</url-pattern>
   </filter-mapping>
-
-  <servlet-mapping>
-    <servlet-name>HelloServlet</servlet-name>
-    <url-pattern>/welcome</url-pattern>
-  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ReadingServlet</servlet-name>
     <url-pattern>/reading</url-pattern>
